
                CHANGES IN party VERSION 0.9-10 (2007-02-28)

    o   internal infrastructure for fit(x, y) interfaces,
        including a VariableFrame method for matrices.

    o   deal with factors with only one level and variables where
        all observations are NA

    o   don't compute design matrices in `ModelEnvFormula'


                CHANGES IN party VERSION 0.9-9 (2007-02-02)

    o   internal changes to data objects: joint transformations
        only necessary for response variables (new class `ResponseFrame')
        but we need to distinguish between testing (using ranks, for
        example) and prediction (means of raw data!).

        Problem spotted by Henric Nilsson <nilsson.henric@gmail.com>.


                CHANGES IN party VERSION 0.9-8 (2007-01-15)

    o   thicker median lines in boxplots


                CHANGES IN party VERSION 0.9-7 (2007-01-15)

    o   fix problems with multivariate response variables
        (spotted by Henric Nilsson <henric.nilsson@sorch.se>)


                CHANGES IN party VERSION 0.9-6 (2006-11-28)

    o   R-2.5.0 does not allow to change the storage.mode of factors


                CHANGES IN party VERSION 0.9-5 (2006-10-27)

    o   adjusted p values computed with testtype = "MonteCarlo"
        did not take dimensionality of the underlying linear statistics
        into account. It is now ensured that _p values_ are resampled,
        not test statistics.

    o   fix escape problems


                CHANGES IN party VERSION 0.9-4 (2006-09-15)

    o   make sure `maxsurrogates' exceeds number of input variables

    o   fix problems reported by valgrind


                CHANGES IN party VERSION 0.9-3 (2006-09-08)

    o    don't call RNG functions in mvt (this is done in C code, once)


                CHANGES IN party VERSION 0.9-2 (2006-09-07)

    o    mob() can't currently handle missing values,
         they are removed and a warning is given.

    o    add `methods' and `vcd' to Depends:
