@@ -1,4 +1,11 @@
 
+                CHANGES IN party VERSION 0.9-10 (2007-05-xx)
+
+    o   populate `where' slot in `mob' objects.
+
+    o   `mob_control' now has an `na.action' argument
+
+
                 CHANGES IN party VERSION 0.9-10 (2007-02-28)
 
     o   internal infrastructure for fit(x, y) interfaces,
